[gd_scene load_steps=3 format=3 uid="uid://cjlxlwr5oourt"]

[ext_resource type="Script" path="res://ui.gd" id="1_wmrtp"]
[ext_resource type="Theme" uid="uid://bd8i240k4dnxs" path="res://textTheme.tres" id="2_cea5x"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_wmrtp")

[node name="levelTime" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01875
anchor_top = 0.762037
anchor_right = 0.109896
anchor_bottom = 0.809259
theme = ExtResource("2_cea5x")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "hello"
metadata/_edit_use_anchors_ = true

[node name="label" type="Label" parent="levelTime"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01875
anchor_top = 0.69537
anchor_right = 0.0395833
anchor_bottom = 0.69537
offset_left = -3.28126
offset_top = -107.464
offset_right = 347.719
offset_bottom = -35.4642
theme = ExtResource("2_cea5x")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Level Time"
metadata/_edit_use_anchors_ = true

[node name="gameTime" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01875
anchor_top = 0.880556
anchor_right = 0.109896
anchor_bottom = 0.927778
theme = ExtResource("2_cea5x")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "hello"
metadata/_edit_use_anchors_ = true

[node name="label" type="Label" parent="gameTime"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01875
anchor_top = 0.813889
anchor_right = 0.05
anchor_bottom = 0.813889
offset_left = -3.28126
offset_top = -113.509
offset_right = 347.719
offset_bottom = -41.5087
theme = ExtResource("2_cea5x")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Game Time"
metadata/_edit_use_anchors_ = true

[node name="miniMap" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -380.0
offset_bottom = 500.0
grow_horizontal = 0

[node name="topDown" type="SubViewport" parent="miniMap"]
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
size = Vector2i(400, 500)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="topDownCamera" type="Camera3D" parent="miniMap/topDown"]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, -20, 20, 11)
projection = 1
current = true
fov = 99.0
size = 75.0
